Fixed overflow-y content for whos online

--- a/Forum/client/styles/pages/sidebar.css
+++ b/Forum/client/styles/pages/sidebar.css
@@ -22,6 +22,7 @@
 	min-height: 300px;
 	max-height: 600px;
 	position: relative;
+	overflow-y: hidden;
 }
 
 	#whos-online:after {
